# CandyDeliveryAppApi

./: README.md  __main__.py  app.py  pyproject.toml  update_base.py
api/: models.py  routes.py  utils.py
candy_delivery_app/api/: __init__.py  couriers.py  orders.py
candy_delivery_app/business_models/: __init__.py  couriers.py
candy_delivery_app/business_models/base/: post.py
candy_delivery_app/business_models/couriers/: __init__.py  get.py  patch.py  post.py
candy_delivery_app/business_models/orders/: post.py  utils.py
candy_delivery_app/db/: context_uri.py  db.py
candy_delivery_app/db/models/: base.py  couriers.py  orders.py  utils.py
candy_delivery_app/models/: __init__.py  _types.py  couriers.py  orders.py  settings.py  utils.py  сouriers.py
tests/: test_assign_orders.py  test_couriers_post.py  test_get_couriers.py  test_orders_complete.py  test_orders_complete_many.py  test_orders_post.py  test_patch_courier.py
