[tool.poetry]
name = "api"
version = "0.0.1"
description = ""
authors = ["kesha1225 <samedov03@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.8.1"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
