[tool.poetry]
name = "api"
version = "0.0.1"
description = ""
authors = ["kesha1225 <samedov03@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.8.1"
aiohttp = "^3.7.4"
uvicorn = "^0.13.4"
asyncpg = "^0.22.0"
sqlalchemy = "^1.4.0"
python-dotenv = "^0.15.0"
gunicorn = "^20.1.0"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-aiohttp = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
